# src/controllers/categories.js
@@ -1,0 +1,11 @@
+import { getCategories } from '../services/categories.js';
+
+export const getCategoriesController = async (req, res) => {
+  const data = await getCategories();
+
+  res.json({
+    status: 200,
+    message: 'Successfully found categories!',
+    data,
+  });
+};
